XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -239,9 +239,10 @@
         </div>
     </section>
 
+
     <!-- Section Content -->
     <section class="about-me-sum clearfix">
-        <div class="wbnrfz_eicw">
+        <div class="wbnrfz_eicw" style="padding-top: 10px; padding-bottom: 3em;">
             <div class="container container-mobile">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
@@ -281,6 +282,7 @@
         </div>
     </section>
 
+
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ci-img"
         style="background-image: url(img/c-i-light.png)">
@@ -288,8 +290,6 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Changes & Improvements over
-                            the Current Version</h2>
                     </div>
                 </div>
             </div>
@@ -302,6 +302,16 @@
             <div class="container container-mobile">
                 <div class="row justify-content-center">
 
+                    <div class="info justify-content-center text-center" style="padding-top: 3em;">
+                        <h2 style="font-size: 30px; font-weight:bold;">Changes & Improvements over
+                            the Current Version</h2>
+                        <p style="text-align: center;">This section will showcase the existing icon assets
+                            currently in use, categorised into different sections.
+                        </p>
+                    </div>
+
+                    <hr>
+
                     <!-- Way Out Icon -->
                     <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
@@ -309,8 +319,10 @@
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Way Out
-                                            Icon</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Way Out Icon</p>
+
                                         <p style="text-align: left;">The proposed new Way Out icon combines two
                                             elements: the Emergency Exit
                                             Icon and the Exit Icon.
@@ -362,8 +374,9 @@
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Exit
-                                            Icon</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Exit Icon</p>
                                         <p style="text-align: left;">The proposed new Exit icon standardises the use of
                                             the 'Exit Border'
                                             symbol for those using both numbers or alphabets. Currently, the Exit icons
@@ -403,8 +416,10 @@
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Lift
-                                            Icon</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Lift Icon</p>
+
                                         <p style="text-align: left;">The Lift Icon received a minor change. To maximise
                                             space, the Up and
                                             Down arrows have been placed in the icon, and the inclusion of only one
@@ -462,8 +477,9 @@
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Lift
-                                            Directory Sign</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Lift Directory Sign</p>
                                         <p style="text-align: left;">The Lift Directory sign has also received some
                                             minor updates. The floor
                                             number has been brought back, and the 'You Are Here' icon removed and
@@ -507,8 +523,10 @@
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Exit
-                                            Directory Sign</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Exit Directory Sign</p>
+
                                         <p style="text-align: left;">The Exit Directory received a minor change and
                                             addition. Previously,
                                             the initial proposal was to arrange it by Exits, but that proved to be
@@ -580,8 +598,10 @@
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Station
-                                            Name Sign</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Station Name Sign</p>
+
                                         <p style="text-align: left;">Currently, there are two variants to the Station
                                             Name signs. Those
                                             earlier versions have a smaller station name, while
@@ -626,8 +646,10 @@
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Station
-                                            Exit Sign</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Station Exit Sign</p>
+
                                         <p style="text-align: left;">Currently, there are three variants to the Station
                                             Exit signs. The
                                             current version has the Exit Number and icons with a
@@ -670,14 +692,15 @@
         </div>
     </section>
 
+
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="dsb-img"
-        style="background-image: url(img/eia-light.png)">
+        style="background-image: url(img/dsb-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Design Standards Brainstorm</h2>
+                        <!-- <h2 class="page-title">Design Standards Brainstorm</h2> -->
                     </div>
                 </div>
             </div>
@@ -872,6 +895,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ioi-img"
@@ -1101,6 +1125,7 @@
         </div>
     </section>
 
+
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ie-img"
         style="background-image: url(img/ie-light.png)">
@@ -1320,7 +1345,6 @@
         </div>
         </div>
     </section>
-
 
     <!-- Footer -->
     <footer class="footer">
