--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -369,12 +369,14 @@
                     <div class="col-lg-12">
                         <div class="row justify-content-center">
 
-                            <div class="info justify-content-center" style="padding-top: 3em;">
+                            <div class="info justify-content-center text-center" style="padding-top: 3em;">
                                 <h2 style="font-size: 30px; font-weight:bold;">Existing Icon Assets</h2>
-                                <p style="text-align: left;">This section will showcase the existing icon assets
+                                <p style="text-align: center;">This section will showcase the existing icon assets
                                     currently in use, categorised into different sections.
                                 </p>
                             </div>
+
+                            <hr>
 
                             <!-- Exit Signs -->
                             <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
