--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -275,6 +275,15 @@
                                     </a>
                                 </div>
                             </div>
+
+                            <!-- Enhancements Overview -->
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+                                <div class="banner-eicw">
+                                    <a href="img/evo2-light.png" id="evo2" class="portfolio-img">
+                                        <img src="img/evo2-light.png" id="evo2-img" class="img-fluid" alt="evo2">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -714,10 +723,18 @@
                     <div class="col-lg-12">
                         <div class="row justify-content-center">
 
+                            <div class="info justify-content-center text-center" style="padding-top: 3em;">
+                                <h2 style="font-size: 30px; font-weight:bold;">Design Standards Brainstorm</h2>
+                                <p style="text-align: center;">This section will showcase the different changes proposed
+                                    being applied, and how those signage elements can be maintained.
+                                </p>
+                            </div>
+
+                            <hr>
+
                             <!-- Train Timings -->
                             <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-                                <h2 class="mb-3"
-                                    style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center;">
                                     Train
                                     Timings</h2>
 
@@ -898,13 +915,13 @@
 
 
     <!-- Section Header -->
-    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ioi-img"
-        style="background-image: url(img/eia-light.png)">
+    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="iu-img"
+        style="background-image: url(img/iu-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Incorporating My Own Ideas</h2>
+                        <!-- <h2 class="page-title">Incorporating My Own Ideas</h2> -->
                     </div>
                 </div>
             </div>
@@ -916,15 +933,27 @@
             <div class="container container-mobile">
                 <div class="row justify-content-center">
 
+                    <div class="info justify-content-center text-center" style="padding-top: 3em;">
+                        <h2 style="font-size: 30px; font-weight:bold;">Incorporating My Own Ideas</h2>
+                        <p style="text-align: left;">Tapping on existing designs, along with the proposed changes,
+                            I further tweaked the design based on my own feedbacks gathered on the ground, and came up
+                            with
+                            new ideas that I believe will enhance the overall user experience.
+                        </p>
+                    </div>
+
+                    <hr>
+
                     <!-- Labels -->
                     <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
-                                    <div class="info justify-content-center">
+                                    <div class="info justify-content-center" style="padding-top: 10px;">
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Labels</p>
 
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Labels
-                                        </h2>
                                         <p style="text-align: left;">From feedbacks on the ground, many commuters didn't
                                             understand what
                                             "A with
@@ -974,9 +1003,9 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">
-                                            Iconography</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Iconography</p>
                                         <p style="text-align: left;">It's time to let the Dark Green Background retire.
                                             Previously used on
                                             backgrounds of Station Name signages, it progressively got replaced with a
@@ -1055,9 +1084,9 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Station
-                                            Names on Exit</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Station Names on Exit</p>
                                         <p style="text-align: left;">The Street Names on the Overhead signages were
                                             removed in
                                             the New Wayfinding System. While it is understood that the
@@ -1133,7 +1162,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Implementation Explorations</h2>
+                        <!-- <h2 class="page-title">Implementation Explorations</h2> -->
                     </div>
                 </div>
             </div>
@@ -1146,15 +1175,25 @@
             <div class="container container-mobile">
                 <div class="row justify-content-center">
 
+                    <div class="info justify-content-center text-center" style="padding-top: 3em;">
+                        <h2 style="font-size: 30px; font-weight:bold;">Implementation Explorations</h2>
+                        <p style="text-align: center;">Now, how do we implement these changes? Here are some of my
+                            ideas.
+                            Ideas include modernizing old signages, as well as improving on existing ones.
+                        </p>
+                    </div>
+
+                    <hr>
+
                     <!-- Exit Prominence -->
                     <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Exit
-                                            Prominence</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Exit Prominence</p>
                                         <p style="text-align: left;">The implementation of the Main Exit Sign in Punggol
                                             Coast gives us a
                                             glimpse of how they would label exits. Yes, it's just putting the Exit
@@ -1200,10 +1239,9 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">
-                                            Modernizing Old Signages
-                                            (1)</h2>
+                                        <p
+                                            style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                            Modernizing Old Signages (1)</p>
                                         <p style="text-align: left;">With LTA's vision of simplifying overhead
                                             signs they removed useful information like
                                             Street Names. Same concept as previously
@@ -1255,10 +1293,9 @@
                                 <div class="row justify-content-center">
                                     <div class="col-lg-12">
                                         <div class="info justify-content-center">
-
-                                            <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">
-                                                Modernizing Old Signages
-                                                (2)</h2>
+                                            <p
+                                                style="text-align: left; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                                                Modernizing Old Signages (2)</p>
                                             <p style="text-align: left;">Some signages got stuck in time. It is either
                                                 those signages have been forgotten, or it is
                                                 simply not feasible to constantly update,
@@ -1310,40 +1347,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
                             </div>
 
                         </div>
                     </div>
                 </div>
             </div>
-    </section>
-
-
-    <!-- Overview Content -->
-    <section class="about-me-summ clearfix" style="padding-top: 5px;">
-        <div class="wbnrfz_details_body">
-            <div class="container container-xxl">
-                <div class="row justify-content-center">
-                    <div class="col-lg-12">
-                        <div class="row justify-content-center">
-
-                            <!-- Enhancements Overview -->
-                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-                                <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: center;">
-                                    Enhancements Overview</h2>
-                                <div class="banner-eicw">
-                                    <a href="img/evo2-light.png" id="evo2" class="portfolio-img">
-                                        <img src="img/evo2-light.png" id="evo2-img" class="img-fluid" alt="evo2">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
     </section>
 
     <!-- Footer -->
