XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -267,7 +267,7 @@
                                     <a href="#dsb-img">
                                         <button class="btn">Design Standards Brainstorm</button>
                                     </a>
-                                    <a href="#ioi-img">
+                                    <a href="#iu-img">
                                         <button class="btn">Incorporating My Own Ideas</button>
                                     </a>
                                     <a href="#ie-img">
