--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
                     data-year="2025">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/rBAx6Yy.png" alt>
+                        <img src="https://i.imgur.com/HaCQ71l.png" alt>
                         <div class="hover-content-blog">
                             <h4>EICW - Implementation Brainstorming</h4>
                             <a class="info" href="eicw/eicw.html" class="portfolio-img"><i
@@ -225,7 +225,7 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeIn" data-wow-delay="300ms"
                     data-year="2024">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
+                        <img src="https://i.imgur.com/6js4RYj.png" alt="tdc-v3">
                         <div class="hover-content-blog">
                             <h4>Train Delays Tracker</h4>
                             <a class="info" href="https://nurafianzulkifli.github.io/train-delays-checker/"
@@ -237,7 +237,7 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="500ms"
                     data-year="2022">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/mrtK74Z.png" alt="bus-rep">
+                        <img src="https://i.imgur.com/JAQpFxJ.png" alt="bus-rep">
                         <div class="hover-content-blog">
                             <h4>Bus Replications</h4>
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
@@ -248,7 +248,7 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeIn" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/GrXbpDs.png" alt="bus-stop-pole">
+                        <img src="https://i.imgur.com/IeRTJiV.png" alt="bus-stop-pole">
                         <div class="hover-content-blog">
                             <h4>LTA Bus Stop Pole Design Refresh</h4>
                             <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
