--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -278,7 +278,7 @@
           <div class="row pw-portfolio">
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2025">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/rBAx6Yy.png" alt>
+                <img src="https://i.imgur.com/HaCQ71l.png" alt>
                 <div class="hover-content-blog align-items-center">
                   <h4>EICW - Implementation Brainstorming</h4>
                   <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
@@ -289,7 +289,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 " data-year="2024">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
+                <img src="https://i.imgur.com/6js4RYj.png" alt="tdc-v3">
                 <div class="hover-content-blog">
                   <h4>Train Delays Tracker</h4>
                   <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
@@ -300,7 +300,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/ZZqsqxc.png" alt="store-invent">
+                <img src="https://i.imgur.com/h91oHX9.png" alt="store-invent">
                 <div class="hover-content-blog">
                   <h4>Store Inventory Tracking</h4>
                   <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
@@ -311,7 +311,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/TdU00ue.png" alt="bp12-nws">
+                <img src="https://i.imgur.com/Y7RzeWB.png" alt="bp12-nws">
                 <div class="hover-content-blog">
                   <h4>New Wayfinding System for BP12 Jelapang</h4>
                   <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
@@ -322,7 +322,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2024">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/NyUt8Sc.png" alt="bus-pids">
+                <img src="https://i.imgur.com/H41Qcdd.png" alt="bus-pids">
                 <div class="hover-content-blog">
                   <h4>LTA Bus PIDS Redesign</h4>
                   <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
@@ -333,7 +333,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2024">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/GrXbpDs.png" alt="bus-stop-pole">
+                <img src="https://i.imgur.com/IeRTJiV.png" alt="bus-stop-pole">
                 <div class="hover-content-blog">
                   <h4>LTA Bus Stop Pole Design Refresh</h4>
                   <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
@@ -344,7 +344,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2022">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/LBGqE6A.png" alt="man-a22-mascot">
+                <img src="https://i.imgur.com/GeKldfP.png" alt="man-a22-mascot">
                 <div class="hover-content-blog">
                   <h4>MAN A22 Lion Mascot Replication</h4>
                   <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
@@ -355,7 +355,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/JUvj9AL.png" alt="myts-app">
+                <img src="https://i.imgur.com/NsltGte.png" alt="myts-app">
                 <div class="hover-content-blog">
                   <h4>MyTransport.SG App Redesign</h4>
                   <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
@@ -367,7 +367,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2022">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/mrtK74Z.png" alt="bus-rep">
+                <img src="https://i.imgur.com/JAQpFxJ.png" alt="bus-rep">
                 <div class="hover-content-blog">
                   <h4>Bus Replications</h4>
                   <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
