XXXX-XX Feature Update for Version Next (6.0.0)

--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -378,7 +378,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video ig mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/59TyNel.png" alt="time-tree">
+                <img src="https://i.imgur.com/fLPs7g4.png" alt="time-tree">
                 <div class="hover-content-blog">
                   <h4>How To Use TimeTree Infographic</h4>
                   <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
@@ -389,7 +389,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/homh9Ja.png" alt="more-rep">
+                <img src="https://i.imgur.com/VEDgOwO.png" alt="more-rep">
                 <div class="hover-content-blog">
                   <h4>More Replications</h4>
                   <a class="info" href="worksbynrfz/more-rep.html" class="portfolio-img"><i
@@ -400,7 +400,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/c0Ui8nR.png" alt="mrt-sign-s1">
+                <img src="https://i.imgur.com/b1p4yg3.png" alt="mrt-sign-s1">
                 <div class="hover-content-blog">
                   <h4>MRT Signages Concept/Replications S1</h4>
                   <a class="info" href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-img"><i
@@ -411,7 +411,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/jd1xmMH.png" alt="mrt-sign-s2">
+                <img src="https://i.imgur.com/OOsyWrU.png" alt="mrt-sign-s2">
                 <div class="hover-content-blog">
                   <h4>MRT Signages Concept/Replications S2</h4>
                   <a class="info" href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-img"><i
@@ -422,7 +422,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 " data-year="2022">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/l1H7ojG.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/y8FkWzk.png" alt="hydration-reg">
                 <div class="hover-content-blog">
                   <h4>Hydration Regime Infographic</h4>
                   <a class="info" href="worksbynrfz/hydrationreg.html" class="portfolio-img"><i
@@ -433,7 +433,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/c6T9wC5.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/Nbumrze.png" alt="hydration-reg">
                 <div class="hover-content-blog">
                   <h4>EZ-Link Card Redesign</h4>
                   <a class="info" href="worksbynrfz/ezlink-red.html" class="portfolio-img"><i
@@ -444,7 +444,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 " data-year="2020">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/LSNcrrn.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/rW2romm.png" alt="hydration-reg">
                 <div class="hover-content-blog">
                   <h4>Food Review Compiler/Flashify - a Flashcard App</h4>
                   <a class="info" href="worksbynrfz/food-rev-flash-app.html" class="portfolio-img"><i
@@ -455,7 +455,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item lg mb-30 " data-year="2017">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/Wc0jdDu.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/ian4hrp.png" alt="hydration-reg">
                 <div class="hover-content-blog">
                   <h4>Friends Forever Logo Design</h4>
                   <a class="info" href="worksbynrfz/ffl.html" class="portfolio-img"><i
@@ -477,7 +477,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 " data-year="2021">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/UpTKOk6.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/FtHn22x.png" alt="hydration-reg">
                 <div class="hover-content-blog">
                   <h4>COVID-19 Shopping Habits Infographic</h4>
                   <a class="info" href="worksbynrfz/igra2.html" class="portfolio-img"><i
