--- a/blog.html
+++ b/blog.html
@@ -262,7 +262,7 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-date="2024-10-12">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/2XiV79F.png" alt>
+                        <img src="https://i.imgur.com/jgMsRKZ.png" alt>
                         <div class="hover-content-blog">
                             <h4>Personal Version 4.4 - Optimizations Galore</h4>
                             <a class="read" href="blog/personal-v4-3.html" class="portfolio-img"><i
