XXXX-XX Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/YgEWKR0.png');
+    background-image: url('https://i.imgur.com/lpPGOrG.png');
     height: 80vh;
   }
 </style>
@@ -301,23 +301,23 @@
     <div class="carousel-gradient carousel-gradient-right"></div>
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
-          <img class="img-fluid" src="https://i.imgur.com/YgEWKR0.png" alt="tdt1-img" draggable="false" id="tdt1-img">
+        <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img" data-gallery="carousel" id="sit1">
+          <img class="img-fluid" src="https://i.imgur.com/YgEWKR0.png" alt="sit1-img" draggable="false" id="sit1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/y9XAe9A.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
-          <img class="img-fluid" src="https://i.imgur.com/y9XAe9A.png" alt="tdt2-img" draggable="false" id="tdt2-img">
+        <a href="https://i.imgur.com/y9XAe9A.png" class="portfolio-img" data-gallery="carousel" id="sit2">
+          <img class="img-fluid" src="https://i.imgur.com/y9XAe9A.png" alt="sit2-img" draggable="false" id="sit2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/sKUoN2g.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
-          <img class="img-fluid" src="https://i.imgur.com/sKUoN2g.png" alt="tdt3-img" draggable="false" id="tdt3-img">
+        <a href="https://i.imgur.com/gYOpvWO.png" class="portfolio-img" data-gallery="carousel" id="sit3">
+          <img class="img-fluid" src="https://i.imgur.com/gYOpvWO.png" alt="sit3-img" draggable="false" id="sit3-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/sKUoN2g.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
-          <img class="img-fluid" src="https://i.imgur.com/sKUoN2g.png" alt="tdt3-img" draggable="false" id="tdt3-img">
+        <a href="https://i.imgur.com/sKUoN2g.png" class="portfolio-img" data-gallery="carousel" id="sit4">
+          <img class="img-fluid" src="https://i.imgur.com/sKUoN2g.png" alt="sit4-img" draggable="false" id="sit4-img">
         </a>
       </div>
     </div>
@@ -465,11 +465,11 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ZGhtKD7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/lpPGOrG.png')";
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ZGhtKD7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/lpPGOrG.png')";
       }
     }
   </script>
