--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -433,7 +433,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/Nbumrze.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/ycNFjzX.png" alt="hydration-reg">
                 <div class="hover-content-blog">
                   <h4>EZ-Link Card Redesign</h4>
                   <a class="info" href="worksbynrfz/ezlink-red.html" class="portfolio-img"><i
