--- a/worksbynrfz/ezlink-red copy.html
+++ b/worksbynrfz/ezlink-red copy.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>COVID-19 Shopping Habits Infographic | WBN</title>
+  <title>EZ-Link Card Redesign | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -68,7 +68,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-tdc"
-    style="background-image: url(https://i.imgur.com/ZGhtKD7.png); height: 100vh;">
+    style="background-image: url(https://i.imgur.com/fepgW5P.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -80,12 +80,12 @@
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../works-by-nrfz.html"> Works By NRFZ</a>
                     </li>
-                    <li class="breadcrumb-item active"><a href="#">Infographics
+                    <li class="breadcrumb-item active"><a href="#">Designs
                       </a>
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">COVID-19 Shopping Habits Infographic</h1>
+                <h1 class="brc">EZ-Link Card Redesign</h1>
               </div>
             </div>
           </div>
@@ -100,19 +100,19 @@
           <div class="details_catagory_wrap">
             <div class="col-sm-4 single_catagory ">
               <span>Category</span>
-              <h4>Infographics</h4>
+              <h4>Designs</h4>
             </div>
             <div class="col-sm-4 single_catagory">
-              <span>Project Year</span>
-              <h4>2021</h4>
+              <span>Project Duration</span>
+              <h4>2023</h4>
             </div>
             <div class="col-sm-4 single_catagory">
               <span>Share Project</span>
               <div class="social_links">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/ezlink-red.html"
                   title="Facebook">
                   <i class="fa-brands fa-facebook"></i> </a>
-                <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Experimenting Improvements of Current Wayfinding"
+                <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/ezlink-red.html&text= EZ-Link Card Redesign"
                   title="X (Twitter)">
                   <i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
@@ -139,18 +139,56 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">A submission for an assignment to produce an
-                      actual
-                      Infographic, based on a given topic.</p>
+                    <p style="text-align: center; padding-bottom: 2em;">An attempt to redesign the EZ-Link Concession
+                      Cards,
+                      based on the current design language of the <a
+                        href="https://www.samuel-lim.com/signage-system" class="hyperlink">wayfinding
+                        system</a>
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
 
-
-            <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
-              <a href="https://i.imgur.com/lkWD0vn.png" class="portfolio-img"><img src="https://i.imgur.com/lkWD0vn.png"
-                  class="img-fluid" alt="cover-page"></a>
+            <div class="details_single_img">
+              <div class="row">
+                <div class="col-lg-4 col-md-4">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/loTnJiG.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/loTnJiG.png" alt="primary-s"></a>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/nC6o2ir.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/nC6o2ir.png" alt="sec-pre-u"></a>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/iizRg1G.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/iizRg1G.png" alt="nsf"></a>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/txdivmv.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/txdivmv.png" alt="concess"></a>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/rJwTHfz.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/rJwTHfz.png" alt="ite"></a>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                  <div class="thumb">
+                    <a href="https://i.imgur.com/ngh4TkD.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/ngh4TkD.png" alt="poly"></a>
+                  </div>
+                </div>
+              </div>
             </div>
 
           </div>
@@ -255,6 +293,7 @@ function updateThemeIcon(theme) {
         themeIcon.classList.remove('animate');
     }, 300); // Match the duration of the CSS transition
 }
+
     function updateHrefForDarkMode() {
       /* Banners */
       const tdcPage = document.getElementById('cv-tdc');
@@ -263,11 +302,11 @@ function updateThemeIcon(theme) {
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ZGhtKD7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/fepgW5P.png')";
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ZGhtKD7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/fepgW5P.png')";
       }
     }
   </script>
