XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -170,7 +170,7 @@
   </section>
 
   <!-- Title/Breadcrumbs -->
-  <section class="about-me-sum clearfix">
+  <section class="about-me-summ clearfix">
     <div class="wbnrfz_eicw">
       <div class="page-header-section">
         <div class="container-xxl container-mobile container-mobile-header">
@@ -239,6 +239,48 @@
     </div>
   </section>
 
+  <!-- Section Content -->
+  <section class="about-me-summ clearfix">
+    <div class="wbnrfz_details_body">
+      <div class="container container-mobile">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <!-- Preface -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <div class="info justify-content-center">
+                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed
+                    Wayfinding Changes - Buses</h2>
+                  <p style="text-align: left;">This section is catered for the Buses side of things - signages and what
+                    not. A lot of focus has been given to the Train's side of things, so why not show the same love for
+                    the Buses' side of things too?</i></p>
+
+                  <p> For the redesigns in this section, I'll be adopting my own design language and principles, based
+                    on the changes I proposed on <a href="eicw-2.html">the second page</a>.</p>
+                </div>
+              </div>
+              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
+                <a href="#psrith">
+                  <button class="btn">Pasir Ris ITH</button>
+                </a>
+                <a href="#cckint">
+                  <button class="btn">Choa Chu Kang Int</button>
+                </a>
+                <a href="#br-diag">
+                  <button class="btn">Bus Route Diagrams</button>
+                </a>
+                <!-- <a href="#postface">
+                  <button class="btn">Postface</button>
+                </a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Section Header -->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="cd-img"
     style="background-image: url(img/cdbus-light.png)">
@@ -246,7 +288,6 @@
       <div class="row h-100 align-items-center">
         <div class="col-12">
           <div class="breadcrumb-content text-center">
-            <h2 class="page-title">Customized Designs</h2>
           </div>
         </div>
       </div>
