--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -433,7 +433,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/ycNFjzX.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/2STNFPm.png" alt="ezlink-red">
                 <div class="hover-content-blog">
                   <h4>EZ-Link Card Redesign</h4>
                   <a class="info" href="worksbynrfz/ezlink-red.html" class="portfolio-img"><i
@@ -444,7 +444,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 " data-year="2020">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/rW2romm.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/rW2romm.png" alt="frc-flash-app">
                 <div class="hover-content-blog">
                   <h4>Food Review Compiler/Flashify - a Flashcard App</h4>
                   <a class="info" href="worksbynrfz/food-rev-flash-app.html" class="portfolio-img"><i
@@ -455,7 +455,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item lg mb-30 " data-year="2017">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/ian4hrp.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/ian4hrp.png" alt="friends-forever">
                 <div class="hover-content-blog">
                   <h4>Friends Forever Logo Design</h4>
                   <a class="info" href="worksbynrfz/ffl.html" class="portfolio-img"><i
@@ -466,7 +466,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 " data-year="2020">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/AsrVHVA.png" alt="hydration-reg">
+                <img src="https://i.imgur.com/AsrVHVA.png" alt="infographic-resume">
                 <div class="hover-content-blog">
                   <h4>Infographic Resume</h4>
                   <a class="info" href="worksbynrfz/igra1.html" class="portfolio-img"><i
