--- a/worksbynrfz/ezlink-red.html
+++ b/worksbynrfz/ezlink-red.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/asgxuPr.png');
+    background-image: url('https://i.imgur.com/naXKAq4.png');
     height: 80vh;
   }
 </style>
@@ -476,11 +476,11 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ZGhtKD7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/naXKAq4.png')";
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ZGhtKD7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/naXKAq4.png')";
       }
     }
   </script>
