--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/lpPGOrG.png');
+    background-image: url('https://i.imgur.com/YrHRPO7.png');
     height: 80vh;
   }
 </style>
@@ -465,11 +465,11 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/lpPGOrG.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/YrHRPO7.png')";
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/lpPGOrG.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/YrHRPO7.png')";
       }
     }
   </script>
