--- a/blog.html
+++ b/blog.html
@@ -247,8 +247,7 @@
                 </div>
             </div>
             <div class="row pw-portfolio">
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2025-06-01">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2025-06-01">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/sycXHkv.png" alt>
                         <div class="hover-content-blog">
@@ -259,8 +258,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-10-12">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2024-10-12">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/jgMsRKZ.png" alt>
                         <div class="hover-content-blog">
@@ -271,8 +269,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-10-12">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30" data-date="2024-10-12">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/lsSie7o.png" alt>
                         <div class="hover-content-blog">
@@ -283,8 +280,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-09-01">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2024-09-01">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/f84Pcxo.png" alt>
                         <div class="hover-content-blog">
@@ -295,8 +291,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-06-30">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30" data-date="2024-06-30">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/JFAxwwd.png" alt>
                         <div class="hover-content-blog">
