--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/xNWKrCJ.png');
+    background-image: url('https://i.imgur.com/jWUcOWy.png');
     height: 75vh;
   }
 </style>
@@ -469,7 +469,7 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/xNWKrCJ.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/jWUcOWy.png')";
 
         tdt1_link.href = 'https://i.imgur.com/FpOufoV.png';
         tdt1_img.src = 'https://i.imgur.com/FpOufoV.png';
@@ -483,7 +483,7 @@
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/xNWKrCJ.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/jWUcOWy.png')";
 
         tdt1_link.href = 'https://i.imgur.com/XPq0mvF.png';
         tdt1_img.src = 'https://i.imgur.com/XPq0mvF.png';
