XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -65,7 +65,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link active">
+          <a href="eicw.html" class="nav-link active">
             <i class="fa-solid fa-map-location"></i>
             <span>EICW</span>
           </a>
@@ -137,7 +137,7 @@
         </a>
       </li>
       <li class="mobile-menu-item">
-        <a href="#" class="mobile-menu-link active">
+        <a href="eicw.html" class="mobile-menu-link active">
           <i class="fa-solid fa-map-location"></i>
           <span>EICW</span>
         </a>
@@ -250,14 +250,12 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed
-                    Wayfinding Changes - Buses</h2>
-                  <p style="text-align: left;">This section is catered for the Buses side of things - signages and what
+                  <p style="text-align: left; padding-top: 2em;">This section is catered for the Buses side of things - signages and what
                     not. A lot of focus has been given to the Train's side of things, so why not show the same love for
                     the Buses' side of things too?</i></p>
 
                   <p> For the redesigns in this section, I'll be adopting my own design language and principles, based
-                    on the changes I proposed on <a href="eicw-2.html">the second page</a>.</p>
+                    on the changes I proposed on <a href="eicw-2.html" class="hyperlink">the second page</a>.</p>
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
@@ -304,7 +302,7 @@
           <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;">Wayfinding Signages
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; padding-top: 1em;">Wayfinding Signages
                 for Bus Interchanges/Terminals</h2>
 
               <h3 style="font-size: 30px; font-weight: bold; margin-top: 2em;"><i
