--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -253,8 +253,8 @@
                   style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 7px;">
                   Enhancements Overview</h2>
                 <div class="banner-eicw">
-                  <a href="img/ccl6-overview-light.png" id="evo3" class="portfolio-img">
-                    <img src="img/ccl6-overview-light.png" id="evo3-img" class="img-fluid" alt="evo3">
+                  <a href="img/ccl6-overview-light.png" id="evo3" class="portfolio-img" style="box-shadow: none; border: none;">
+                    <img src="img/ccl6-overview-light.png" id="evo3-img" class="img-fluid" alt="evo3" style="box-shadow: none; border: none;">
                   </a>
                 </div>
               </div>
