--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">
+                    <a href="eicw.html" class="nav-link active">
                         <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
@@ -137,7 +137,7 @@
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#" class="mobile-menu-link active">
+                <a href="eicw.html" class="mobile-menu-link active">
                     <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
@@ -279,8 +279,8 @@
                             <!-- Enhancements Overview -->
                             <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <div class="banner-eicw">
-                                    <a href="img/evo2-light.png" id="evo2" class="portfolio-img">
-                                        <img src="img/evo2-light.png" id="evo2-img" class="img-fluid" alt="evo2">
+                                    <a href="img/evo2-light.png" id="evo2" class="portfolio-img" style="box-shadow: none; border: none;">
+                                        <img src="img/evo2-light.png" id="evo2-img" class="img-fluid" alt="evo2" style="box-shadow: none; border: none;">
                                     </a>
                                 </div>
                             </div>
