--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -239,22 +239,51 @@
     </div>
   </section>
 
-  <!-- Section Header -->
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="cd-img"
-    style="background-image: url(img/cdui-light.png)">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12">
-          <div class="breadcrumb-content text-center">
-            <h2 class="page-title">Customized Designs</h2>
+  <!-- Section Content 1 -->
+  <section class="about-me-summ clearfix">
+    <div class="wbnrfz_details_body">
+      <div class="container container-mobile">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <!-- Preface -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <div class="info justify-content-center">
+                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">Proposed UI/UX
+                    Changes</h2>
+                  <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
+                    elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
+                    navigate and understand the information presented, regardless of their familiarity with the system.
+                    These user interfaces are designed to be intuitive and visually appealing, enhancing the overall
+                    commuting experience.
+                  </p>
+                </div>
+              </div>
+              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms" style="padding-bottom: 2em;">
+                <a href="#bcr">
+                  <button class="btn">Bus Card Reader UI (LTA)</button>
+                </a>
+                <a href="#bat">
+                  <button class="btn">Bus Arrival Timings (LTA)</button>
+                </a>
+                <a href="#tv">
+                  <button class="btn">TrainVision (TEL)</button>
+                </a>
+                <a href="#staris2">
+                  <button class="btn">STARiS 2.0 (SMRT)</button>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
+        <hr>
       </div>
     </div>
   </section>
 
-  <!-- Section Content 1 -->
-  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;">
+  <!-- Section Content 2 -->
+  <section class="about-me-summ clearfix" style="padding-top: 2em; padding-bottom: 10px;">
     <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
@@ -263,7 +292,7 @@
           <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;" id="bcr">Bus Card
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold;" id="bcr">Bus Card
                 Reader UI (LTA)
               </h2>
               </h2>
@@ -322,7 +351,7 @@
           <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;" id="bat">Bus Arrival
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="bat">Bus Arrival
                 Timings (LTA)
               </h2>
               <p style="text-align: left;">The new panels are an improved version with vibrant graphics and bigger
