--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">
+                    <a href="eicw.html" class="nav-link active">
                         <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
@@ -137,7 +137,7 @@
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#" class="mobile-menu-link active">
+                <a href="eicw.html" class="mobile-menu-link active">
                     <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
@@ -267,8 +267,8 @@
                                 <!-- Evolution of our Transit System Design -->
                                 <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                     <div class="banner-eicw">
-                                        <a href="img/evo-light.png" id="evo" class="portfolio-img">
-                                            <img src="img/evo-light.png" id="evo-img" class="img-fluid" alt="evo">
+                                        <a href="img/evo-light.png" id="evo" class="portfolio-img" style="box-shadow: none; border: none;">
+                                            <img src="img/evo-light.png" id="evo-img" class="img-fluid" alt="evo" style="box-shadow: none; border: none;">
                                         </a>
                                     </div>
                                 </div>
